# ghost_client

./: CMakeLists.txt  main.cpp
src/Model/Post/: PostModel.cpp  PostModel.h
src/Parser/: WebClientInterface.h
src/Parser/Ghost/: GhostClient.cpp  GhostClient.h
src/Widget/: ChildWidgetInterface.h  MainWindow.cpp  MainWindow.h
src/Widget/Post/Edit/: PostEditWindow.cpp  PostEditWindow.h
src/Widget/Post/View/: PostListWidget.cpp  PostListWidget.h
